# NNSubgraphExtractor

./: .gitignore  CMakeLists.txt
include/: graph.h  nn_subg.h  node.h  onnx.proto3.pb.h  subg.h  subgraph_extractor.h
src/: CMakeLists.txt  graph.cc  main.cc  main.cpp  nn_subg.cc  onnx.proto3.pb.cc  subg.cc  subgraph_extractor.cc
tests/: CMakeLists.txt  test_directed_graph.cc  test_subgraph_extractor.cc
